--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
         <mat-label>Total earning</mat-label>
         <input name='earning' [(ngModel)]="newMovie.earning" type='number' matInput placeholder="In million">
       </mat-form-field>
-      
+
       <mat-form-field appearance="fill">
         <mat-label>Release date</mat-label>
         <input name='releaseDate' [(ngModel)]="newMovie.releaseDate" matInput [matDatepicker]="picker">
@@ -19,10 +19,11 @@
         <mat-datepicker #picker></mat-datepicker>
       </mat-form-field>
       <button (click)="addNewMovies()" style="margin-left: 33%;" mat-raised-button color="primary">Add Movie</button>
+      <button (click)="changeUser()" style="margin-left: 33%;" mat-raised-button color="accent">Change User</button>
     </form>
   </div>
   <mat-divider></mat-divider>
   <div style="padding: 20px;">
-    <app-movie-list [movies]='movies' ></app-movie-list>
+    <app-movie-list></app-movie-list>
   </div>
 </div>
